force-app/main/default/objects/AcctPlanWorkingCapital__c/AcctPlanWorkingCapital__c.object-meta.xml
<CustomObject>
    <label>Account Plan Working Capital</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Working Capital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Working Capital</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>