force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/AvgAPDays__c.field-meta.xml
<CustomField>
    <fullName>AvgAPDays__c</fullName>
    <description>Average A/P Days</description>
    <inlineHelpText>Average A/P Days</inlineHelpText>
    <label>AvgAPDays</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>