force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/AvgARDays__c.field-meta.xml
<CustomField>
    <fullName>AvgARDays__c</fullName>
    <description>Average A/R Days</description>
    <inlineHelpText>Average A/R Days</inlineHelpText>
    <label>AvgARDays</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>