force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/AvgInvDays__c.field-meta.xml
<CustomField>
    <fullName>AvgInvDays__c</fullName>
    <description>Average Inv. Days</description>
    <inlineHelpText>Average Inv. Days</inlineHelpText>
    <label>AvgInvDays</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>