force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/CreditFee__c.field-meta.xml
<CustomField>
    <fullName>CreditFee__c</fullName>
    <description>Credit fee</description>
    <formula>IF(AcctPlanWallet__r.FICustomerFlag__c,(WorkingCapitalNeedsFI__c*FrontEndFee__c),(WorkingCapitalNeeds__c *  FrontEndFee__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit fee</inlineHelpText>
    <label>CreditFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>