force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/FrontEndFee__c.field-meta.xml
<CustomField>
    <fullName>FrontEndFee__c</fullName>
    <description>Front end fee</description>
    <inlineHelpText>Front end fee</inlineHelpText>
    <label>FrontEndFee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>