force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/NoOfMonth__c.field-meta.xml
<CustomField>
    <fullName>NoOfMonth__c</fullName>
    <description>No.of month in each period</description>
    <inlineHelpText>No.of month in each period</inlineHelpText>
    <label>NoOfMonth</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>