force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal Period</fullName>
            </value>
            <value>
                <fullName>High Seasonal Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>