force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Height</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>