force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/WorkingCapitalNeeds__c.field-meta.xml
<CustomField>
    <fullName>WorkingCapitalNeeds__c</fullName>
    <description>Working Capital Needs</description>
    <formula>AcctPlanWallet__r.EstimatedSalesAmtPerYear__c *  TradeCycleDays__c /365</formula>
    <inlineHelpText>Working Capital Needs</inlineHelpText>
    <label>WorkingCapitalNeeds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>