force-app/main/default/objects/AcctPlanWorkingCapital__c/fields/WorkingCapitalNeedsFI__c.field-meta.xml
<CustomField>
    <fullName>WorkingCapitalNeedsFI__c</fullName>
    <description>Working Capital Needs FI</description>
    <inlineHelpText>Working Capital Needs FI</inlineHelpText>
    <label>WorkingCapitalNeedsFI</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>